--- a/_posts/0000-01-02-krishna8684.md
+++ b/_posts/0000-01-02-krishna8684.md
@@ -2,5 +2,7 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hello World!
+## Hello World! Welcome! 
+*what do you want to learn today?
+
 Use the left arrow to go back!
